<resources>
    <string name="app_name">iFarmaMobile</string>

    <!-- Strings related to login -->
    <string name="prompt_usuario">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar sesión o registrarse</string>
    <string name="action_sign_in_short">Iniciar Sesión</string>
    <string name="error_invalid_usuario">El usuario no es valido</string>
    <string name="error_red">Error de conexión con el servidor</string>
    <string name="error_invalid_password">la contraseña es demasiado corta</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_incorrect_login">El login no es correcto</string>
    <string name="error_incorrect_estado">El usuario no tiene permisos</string>
    <string name="error_field_required">Campo obligatorio</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_search">Buscar</string>
    <!--Menu medico-->
    <string name="agenda">Lista pacientes</string>
    <string name="correo">Correo</string>
    <!--Menu paciente-->
    <string name="perfil">Perfil</string>
    <string name="tratamientoPac">Tratamiento</string>
    <string name="correoPac">Correo</string>
    <string name="farmaciasPac">Farmacias</string>

    <!-- correo-->
    <string name="boton_nuevo">Nuevo mensaje</string>
    <string name="boton_responder">Responder</string>
    <string name="fecha_correo">Fecha: </string>
    <string name="remitente_correo">Remitente: </string>

    <!--respuesta correo-->
    <string name="mensaje_error_title">Error</string>
    <string name="mensaje_error_texto">No se ha podido enviar el mensaje, vuelva a intentarlo</string>
    <string name="mensaje_enviado_title">Enviado</string>
    <string name="mensaje_enviado_texto">El mensaje se ha enviado correctamente</string>
    <string name="mensaje_validacion_asunto">El asunto dado no es valido</string>
    <string name="mensaje_validacion_mensaje">El mensaje dado no es valido</string>
    <string name="mensaje_validacion_error">Mensaje no valido</string>

    <!--tratamientos-->
    <string name="tratamiento_eliminar_ok">El tratamiento ha sido borrado</string>
    <string name="tratamiento_anadir_ok">Se ha añadido el tratamiento al paciente"</string>
    <string name="tratamiento_anadir_error">No se ha podido añadir, vuelva a intentarlo</string>
    <string name="tratamiento_anadir_fecha">La fecha tiene que ser superior a la actual</string>
    <string name="tratamiento_anadir_pastillas">El numero de pastillas ha de ser superior a 0</string>
    <string name="tratamiento_anadir_periodicidad">La periodicidad debe de ser superior a 0 y menor de 24 horas</string>

    <!-- otros-->
    <string name="hello_blank_fragment">Fragmento vacio</string>
    <string name="tratamiento">Tratamiento:</string>
    <string name="fecha_fin">Finalización:</string>
    <string name="eliminar_tratamiento">Eliminar tratamiento</string>
    <string name="en_tratamiento">En tratamiento</string>
    <string name="actualizar">Actualizar</string>
    <string name="nuevo_mensaje">Nuevo mensaje</string>
    <string name="asunto">Asunto:</string>
    <string name="Int_asunto">Introduce el Asunto</string>
    <string name="mensaje">Mensaje</string>
    <string name="pista_mensaje">Introduce el texto del mensaje</string>
    <string name="enviar">Enviar</string>
    <string name="nuevo_tratamiento">Nuevo tratamiento</string>
    <string name="medicamento">Medicamento:</string>
    <string name="periodicidad">Periodicidad:</string>
    <string name="hint_periodicidad">Frecuencia en horas</string>
    <string name="num_pastillas">Nº de pastillas:</string>
    <string name="hint_pastillas">Nº de pastillas por toma</string>
    <string name="hint_fecha_fin">01/01/1900</string>
    <string name="anadir">Añadir</string>
    <string name="hint_anadir_tratamiento">Añadir Tratamiento</string>
    <string name="select_fecha_fin">Seleccionar fecha final</string>
    <string name="creada">App creada por:</string>
    <string name="creador1">Jose Luis Sanchez Garcia</string>
    <string name="Creador2">Arturo Marino Quintana</string>
</resources>
