<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fdi.ucm.ifarmamobile.NuevoCorreoFragment"
    android:background="@color/fondo_fragment">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape"
        android:backgroundTint="@color/fondo_base"
        android:padding="10dp">

    </RelativeLayout>

    <TextView
        android:id="@+id/nuevoCorreoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/nuevo_mensaje"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/nuevoCorreoAsuntoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/nuevoCorreoLabel"
        android:layout_below="@+id/nuevoCorreoLabel"
        android:layout_marginTop="9dp"
        android:text="@string/asunto"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:id="@+id/nuevoCorreoAsunto"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nuevoCorreoLabel"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/Int_asunto"
        android:inputType="text"
        android:singleLine="true"
        android:text="Asunto" />

    <TextView
        android:id="@+id/nuevoCorreoMensajeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/nuevoCorreoAsuntoLabel"
        android:layout_below="@+id/nuevoCorreoAsunto"
        android:text="@string/mensaje"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:id="@+id/nuevoCorreoMensaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/nuevoCorreoMensajeLabel"
        android:layout_below="@+id/nuevoCorreoMensajeLabel"
        android:ems="10"
        android:hint="@string/pista_mensaje"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/shape"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/enviar"
        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse" />
</RelativeLayout>
