<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvTratamientoMedico"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/fondo_base">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="97dp"
        android:background="@drawable/shape"
        android:paddingLeft="10dp">

        <TextView
            android:id="@+id/cardTratamientoMedicoMedicamento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Medicamento"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="27sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cardTratamientoMedicoTomas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@+id/cardTratamientoMedicoTratLabel"
            android:text="Una cada 8 horas"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="?attr/colorControlNormal" />

        <TextView
            android:id="@+id/cardTratamientoMedicoId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/cardTratamientoMedicoBotonEliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/cardTratamientoMedicoTomas"
            android:contentDescription="@string/eliminar_tratamiento"
            android:src="@android:drawable/ic_delete" />

        <TextView
            android:id="@+id/cardTratamientoMedicoTratLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/cardTratamientoMedicoTomas"
            android:layout_alignParentStart="true"
            android:text="@string/tratamiento"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/cardTratamientoMedicoFinLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/cardTratamientoMedicoTratLabel"
            android:text="@string/fecha_fin"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/cardTratamientoMedicoFechaFin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/cardTratamientoMedicoTomas"
            android:layout_below="@+id/cardTratamientoMedicoTomas"
            android:layout_toEndOf="@+id/cardTratamientoMedicoFinLabel"
            android:text="29/10/1956"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="?attr/colorControlNormal" />

    </RelativeLayout>
</android.support.v7.widget.CardView>